# gematria-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
data/: test-hebrew.txt
src/: lib.rs  main.rs  methods.rs
