[package]
name = "gematria_rs"
version = "0.1.0"
edition = "2021"
authors = ["Amit Shmulevitch <amitsh1995@gmail.com>"]
description = "A rust implementation of the Gematria, a traditional Hebrew numerology system."
license = "MIT"

[dependencies]
clap = {version = "4.4.12", features = ["derive"]}

[[bin]]
name = "gematria"
path = "src/main.rs"

[build]
rustdocflags = [ "--html-in-header", "./src/docs-header.html" ]