[package]
name = "gematria_rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Amit Shmulevitch <amitsh1995@gmail.com>"]
description = "A rust implementation of the Gematria, a traditional Hebrew numerology system."
repository = "https://github.com/MadBull1995/gematria-rs"
exclude = ["data/hebrew-all.txt"]

[dependencies]
clap = {version = "4.4.12", features = ["derive"]}

[[bin]]
name = "gematria"
path = "src/main.rs"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]